data/derived/comb/progs/unify/prog8790.ml.out
Characters 77-97:
  | h::t -> matchHeads (getTail(explode w));;
                       ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type 'a list list
       Type char is not compatible with type 'a list 
